Making the admin's navbar

--- a/Refeitorio/Views/Home/Index.cshtml
+++ b/Refeitorio/Views/Home/Index.cshtml
@@ -47,8 +47,7 @@
     @if (role == "Admin")
     {
         <h2>Dashboard</h2>
-        <p>Bem vindo!</p>
-        <partial name="_AdminPendingUsers" model="Model" />
+        <p>Bem vindo, @role!</p>
     }
     else
     {
