--- a/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
+++ b/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
@@ -48,6 +48,7 @@
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/Refeitorio.styles.css" asp-append-version="true" />
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <header>
@@ -57,6 +58,13 @@
                     <div>
                         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:#222;">Início</a>
                     </div>
+
+                    @if (role == "Admin")
+                    {
+                        <div>
+                            <a class="nav-item" href="#" id="pedidosBtn">Pedidos de registo</a>
+                        </div>
+                    }
 
                     <div class="d-flex align-items-center gap-2">
                         <div class="text-end me-3 d-none d-md-block">
@@ -73,9 +81,20 @@
             </div>
         </header>
         <div class="container">
-            <main role="main" class="pb-3">
+            <main role="main" class="pb-3" id="page-content">
                 @RenderBody()
             </main>
         </div>
+        <script>
+            $(function () {
+                $("#pedidosBtn").click(function (e) {
+                    e.preventDefault();
+
+                    $.get("/Home/AdminPendingUsers", function (data) {
+                        $("#page-content").html(data);
+                    });
+                });
+            });
+        </script>
     </body>
 </html>
