Now onto selecting lunch

--- a/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
+++ b/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
@@ -91,7 +91,7 @@
                 @RenderBody()
             </main>
         </div>
-        <script src="~/js/adminNavbar.js"></script>
-        <script src="~/js/adminCreateMenus.js"></script>
+        <script src="~/js/adminNavbar.js" asp-append-version="true"></script>
+        <script src="~/js/adminCreateMenus.js" asp-append-version="true"></script>
     </body>
 </html>
