--- a/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
+++ b/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
@@ -95,9 +95,9 @@
             </main>
         </div>
         <script src="~/js/adminNavbar.js" asp-append-version="true"></script>
-        <script>
-            window.savedLunches = @Html.Raw(JsonSerializer.Serialize(menuService.LunchByDate));
-        </script>
+        @* <script>
+            window.savedLunches = @Html.Raw(JsonSerializer.Serialize(menuService.TEST));
+        </script> *@
         <script src="~/js/adminCreateMenus.js" asp-append-version="true"></script>
     </body>
 </html>
