--- a/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
+++ b/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
@@ -75,6 +75,13 @@
                         </div>
                     }
 
+                    @if (role == "Staff")
+                    {
+                        <div>
+                            <a class="nav-item" href="#" id="CriarProdutosBtn">Criar produtos</a>
+                        </div>
+                    }
+
                     <div class="d-flex align-items-center gap-2">
                         <div class="text-end me-3 d-none d-md-block">
                             <div style="font-weight:600;">@userName</div>
@@ -95,6 +102,7 @@
             </main>
         </div>
         <script src="~/js/adminNavbar.js" asp-append-version="true"></script>
+        <script src="~/js/funcNavbar.js" asp-append-version="true"></script>
         @* <script>
             window.savedLunches = @Html.Raw(JsonSerializer.Serialize(menuService.TEST));
         </script> *@
