--- a/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
+++ b/Refeitorio/Views/Shared/_LayoutNavbar.cshtml
@@ -119,6 +119,7 @@
         <script src="~/js/adminNavbar.js" asp-append-version="true"></script>
         <script src="~/js/funcNavbar.js" asp-append-version="true"></script>
         <script src="~/js/student.js" asp-append-version="true"></script>
+        <script src="~/js/barSearch.js" asp-append-version="true"></script>
         @* <script>
             window.savedLunches = @Html.Raw(JsonSerializer.Serialize(menuService.TEST));
         </script> *@
